# STL-rs

./: Cargo.toml  README.md
STL/: NOTICE.txt
src/: alloc.rs  lib.rs  semantics.rs
src/list/: into_iter.rs  mod.rs
src/string/: mod.rs  narrow.rs  utf16.rs  utf32.rs  utf8.rs  wide.rs
src/vec/: into_iter.rs  mod.rs  msvc2012.rs
