[package]
name = "cxx-stl"
version = "4.4.0"
edition = "2021"
authors = ["Dasaav"]
description = "High level C++ STL Rust bindings"
readme = "README.md"
repository = "https://github.com/Dasaav-dsv/STL-rs"
license = "MIT OR Apache-2.0"

[dependencies.cstl-sys]
git = "https://github.com/DuelistEventNetwork/cstl-sys"
branch = "denmain"
# path="../cstl-sys"

[features]
msvc2012 = []
